--- a/Bokeh-Platform/.htaccess
+++ b/Bokeh-Platform/.htaccess
@@ -1,3 +1,12 @@
+########################
+#### Bokeh Platform ####
+########################
+
+# ErrorDocument
+ErrorDocument 403 index.php/http_status_forbidden
+ErrorDocument 404 index.php/http_status_not_found
+
+# Rewrite engine
 RewriteEngine On
 #Options +FollowSymlinks
 RewriteBase /
