--- a/Bokeh-Platform/configs/system.cfg
+++ b/Bokeh-Platform/configs/system.cfg
@@ -4,9 +4,6 @@ server_name = "www.mysite.com"
 server_port = 80
 server_path = "/bokeh/"
 
-; Set default controller
-default_controller = "default"
-
 ; Site configuration
 site_name = "My Bokeh Platform site"
 site_description = "This is a Bokeh Platform powered site"
@@ -17,6 +14,12 @@ template = "default"
 date_format = "j | Y"
 hour_format = "H:i"
 timezone = "Europe/Rome"
+
+; Set default controller
+default_controller = "default"
+
+; Set default language
+default_language = "en"
 
 ; Plugins to load (separated by pipe '|')
 plugins = "test"
