--- a/Bokeh-Platform/configs/db_tables.ini
+++ b/Bokeh-Platform/configs/db_tables.ini
@@ -1,5 +1,5 @@
 ; Tables name defines
 
-; example = table
+; example = "table"
 ; from controllers: $config->tables->example
 ; point to {prefix}table
