--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
 
 env:
   - DB=mysql
+  - DB=mysqli
 
 before_script:
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'DROP DATABASE IF EXISTS bokeh_platform; CREATE DATABASE IF NOT EXISTS bokeh_platform;'; fi"
