--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 
 before_script:
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'DROP DATABASE IF EXISTS bokeh_platform; CREATE DATABASE IF NOT EXISTS bokeh_platform;'; fi"
+  - sh -c "if [ '$DB' = 'mysqli' ]; then mysql -e 'DROP DATABASE IF EXISTS bokeh_platform; CREATE DATABASE IF NOT EXISTS bokeh_platform;'; fi"
   - pyrus install --force phpunit/DbUnit
   - phpenv rehash
 
