--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ env:
 
 before_script:
   - sh -c "if [ '$DB' = 'mysql' ] || [ '$DB' = 'mysqli' ]; then mysql -e 'DROP DATABASE IF EXISTS bokeh_platform; CREATE DATABASE IF NOT EXISTS bokeh_platform;'; fi"
+  - cd Bokeh-Platform
+  - composer install
+  - cd ../
 
 script:
   - phpunit --configuration tests/phpunit_$DB.xml
