--- a/Bokeh-Platform/configs/system.ini
+++ b/Bokeh-Platform/configs/system.ini
@@ -3,6 +3,7 @@ server_protocol = "http"
 server_name = "www.mysite.com"
 server_port = 80
 server_path = "/bokeh/"
+log_file = "%root_path%logs/bp_log.txt"
 
 ; Site configuration
 site_name = "My Bokeh Platform site"
